@@ -1,6 +1,6 @@
 #!/bin/sh
 
-PATH=/usr/bin
+PATH=/bin:/usr/bin
 echo '<TABLE BORDER="0" CELLSPACING="2" CELLPADDING="0" WIDTH="100%">'
 echo '<TR BGCOLOR="WHITE"><TD WIDTH="30%" VALIGN="TOP">'
 echo 'B_LIST'
@@ -13,7 +13,12 @@ echo 'E_LIST_HEADER'
 c=""
 x="0"
 v=0
-for i in $(X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1"); do
+tmpfile="/tmp/ls_url-$$"
+X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1" > $tmpfile
+echo "EOF" >> $tmpfile
+i=""
+while [ "$i" != "EOF" ]; do
+	read i
 	if [ "$x" = "0" ] ; then
 		j=$i
 		x=1
@@ -24,7 +29,7 @@ for i in $(X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1"); do
 			c="#D0D0D0"
 		fi
 		echo '<TR BGCOLOR="'$c'"><TD><TABLE BORDER="0" CELLSPACING="1" CELLPADDING="0"><TR><TD><IMG SRC="X_ROOT/img/icon/dir.gif" BORDER="0"></TD><TD><A HREF="'$j'/">'$j'</A></TD></TR></TABLE></TD>'
-		if [ $3 != "0" ] ; then  
+		if [ "$3" != "0" ] ; then
 			echo '<TD ALIGN="CENTER">X_BUTTON({Delete folder}, {icon/x.gif}, {templates/del.xql?What=0&Path='$1'&Name='$i'})</TD></TR>'
 		else
 			echo '</TR>'
@@ -32,7 +37,8 @@ for i in $(X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1"); do
 		x=0
 	fi
 	v=1
-done
+done < $tmpfile
+rm -f $tmpfile
 if [ "$v" = "0" ] ; then echo '<TR><TD COLSPAN="2">No folders.</TD></TR>' ; fi
 echo 'E_LIST'
 echo '</TD><TD WIDTH="60%" VALIGN="TOP">'
@@ -41,12 +47,16 @@ echo 'B_LIST_HEADER'
 echo 'X_LIST_TH({Files})'
 if [ $3 != "0" ] ; then
 echo 'X_LIST_TH({Delete}, {1%})'
-fi   
+fi
 echo 'E_LIST_HEADER'
 c=""
 x="0"
 v=0
-for i in $(X_SCRIPT_BIN/ls_url f "$DOCUMENT_ROOT" "$1"); do
+X_SCRIPT_BIN/ls_url f "$DOCUMENT_ROOT" "$1" > $tmpfile
+echo "EOF" >> $tmpfile
+i=""
+while [ "$i" != "EOF" ]; do
+	read i
 	if [ "$x" = "0" ] ; then
 		j=$i
 		x=1
@@ -65,7 +75,8 @@ for i in $(X_SCRIPT_BIN/ls_url f "$DOCUMENT_ROOT" "$1"); do
 		x=0
 	fi
 	v=1
-done
+done < $tmpfile
+rm -f $tmpfile
 if [ "$v" = "0" ] ; then echo '<TR><TD COLSPAN="2">No templates.</TD></TR>' ; fi
 echo 'E_LIST'
 echo '</TD></TR>'
