@@ -1,6 +1,6 @@
 #!/bin/sh
 
-PATH=/usr/bin
+PATH=/bin:/usr/bin
 
 echo '<TABLE BORDER="0" CELLSPACING="2" CELLPADDING="0" WIDTH="100%">'
 echo '<TR BGCOLOR="WHITE"><TD WIDTH="30%" VALIGN="TOP">'
@@ -11,7 +11,12 @@ echo 'E_LIST_HEADER'
 c=""
 x="0"
 v=0
-for i in $(X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1"); do
+tmpfile="/tmp/ls_url-$$"
+X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1" > $tmpfile
+echo "EOF" >> $tmpfile
+i=""
+while [ "$i" != "EOF" ]; do
+	read i
 	if [ "$x" = "0" ]; then
 		j=$i
 		x=1
@@ -25,7 +30,8 @@ for i in $(X_SCRIPT_BIN/ls_url d "$DOCUMENT_ROOT" "$1"); do
 		x=0
 	fi
 	v=1
-done
+done < $tmpfile
+rm -f $tmpfile
 if [ "$v" = "0" ] ; then echo '<TR><TD>No folders.</TD></TR>' ; fi
 echo 'E_LIST'
 echo '</TD><TD WIDTH="60%" VALIGN="TOP">'
@@ -37,7 +43,11 @@ echo 'E_LIST_HEADER'
 c=""
 x="0"
 v=0
-for i in $(X_SCRIPT_BIN/ls_url f "$DOCUMENT_ROOT" "$1"); do
+X_SCRIPT_BIN/ls_url f "$DOCUMENT_ROOT" "$1" > $tmpfile
+echo "EOF" >> $tmpfile
+i=""
+while [ "$i" != "EOF" ]; do
+	read i
 	if [ "$x" = "0" ]; then
 		j=$i
 		x=1
@@ -52,7 +62,8 @@ for i in $(X_SCRIPT_BIN/ls_url f "$DOCUMENT_ROOT" "$1"); do
 		x=0
 	fi
 	v=1
-done
+done < $tmpfile
+rm -f $tmpfile
 if [ "$v" = "0" ] ; then echo '<TR><TD COLSPAN="2">No templates.</TD></TR>' ; fi
 echo 'E_LIST'
 echo '</TD></TR>'
