@@ -6,6 +6,7 @@ ldadd=
 ldflags=
 libtool_dir=
 path_to_bin_program=parser
+
 [General]
 AMChanged=false
 author=
@@ -24,20 +25,24 @@ sub_dir=parser/
 version=0.1
 version_control=CVS
 workspace=1
+
 [LFV Groups]
 Headers=*.h,*.hh,*.hxx,*.hpp,*.H,
 Others=*,
 Sources=*.cpp,*.c,*.cc,*.C,*.cxx,*.ec,*.ecpp,*.lxx,*.l++,*.ll,*.l,
 groups=Headers,Sources,Others,
+
 [Makefile]
 dist=true
 install=false
 install_location=
 type=DATA
+
 [Makefile.am]
 files=parser.kdevprj,Makefile,
 sub_dirs=parser,
 type=normal
+
 [Workspace_1]
 browser_file=file:/usr/lib/qt/html/index.html
 cpp_file=Untitled.cpp
@@ -45,216 +50,260 @@ header_file=Untitled.h
 openfiles=Untitled.h,Untitled.cpp,
 show_outputview=false
 show_treeview=true
+
 [parser.kdevprj]
 dist=true
 install=false
 install_location=
 type=DATA
+
 [parser/Makefile]
 dist=true
 install=false
 install_location=
 type=DATA
+
 [parser/Makefile.am]
 files=parser/Makefile,parser/tol_actions.h,parser/tol_atoms.h,parser/tol_cgiparams.h,parser/tol_context.h,parser/tol_cparser.h,parser/tol_error.h,parser/tol_lex.h,parser/tol_parser.h,parser/tol_types.h,parser/tol_util.h,parser/csocket.cpp,parser/csocket.h,parser/exceptions.h,parser/global.h,parser/cgi.h,parser/cgib.h,parser/threadpool.cpp,parser/threadpool.h,parser/cgi.cpp,parser/main.cpp,parser/tol_actions.cpp,parser/tol_atoms.cpp,parser/tol_context.cpp,parser/tol_cparser.cpp,parser/tol_error.cpp,parser/tol_lex.cpp,parser/tol_parser.cpp,parser/tol_util.cpp,parser/tol_srvdef.h,parser/mutex.cpp,parser/mutex.h,parser/threadkey.h,parser/readconf.h,parser/readconf.cpp,parser/process_req.cpp,parser/process_req.h,parser/thread.cpp,parser/thread.h
 sub_dirs=
 type=prog_main
+
 [parser/cgi.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/cgi.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/cgib.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/csocket.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/csocket.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/docs/Makefile.am]
 sub_dirs=
 type=normal
+
 [parser/docs/en/Makefile.am]
 sub_dirs=
 type=normal
+
 [parser/exceptions.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/global.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/main.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/mutex.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/mutex.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/process_req.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/process_req.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/readconf.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/readconf.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/thread.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/thread.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/threadkey.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/threadpool.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/threadpool.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_actions.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_actions.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_atoms.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_atoms.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_cgiparams.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_context.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_context.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_cparser.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_cparser.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_error.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_error.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_lex.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_lex.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_parser.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_parser.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_srvdef.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_types.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [parser/tol_util.cpp]
 dist=true
 install=false
 install_location=
 type=SOURCE
+
 [parser/tol_util.h]
 dist=true
 install=false
 install_location=
 type=HEADER
+
 [po/Makefile.am]
 sub_dirs=
 type=po
